# serializer version: 1
# name: test_diagnostics_cloudhook_instance
  dict({
    'has_cloudhooks': True,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': dict({
      'body_temperature': None,
      'bone_mass': None,
      'diastolic_blood_pressure': None,
      'electrodermal_activity_feet': None,
      'electrodermal_activity_left_foot': None,
      'electrodermal_activity_right_foot': None,
      'extracellular_water': None,
      'fat_free_mass': None,
      'fat_free_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
      ]),
      'fat_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
      ]),
      'fat_mass_weight': None,
      'fat_ratio': None,
      'heart_rate': None,
      'height': None,
      'hydration': None,
      'intracellular_water': None,
      'muscle_mass': None,
      'muscle_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
        'left_wrist',
      ]),
      'pulse_wave_velocity': None,
      'skin_temperature': None,
      'sp02': None,
      'systolic_blood_pressure': None,
      'temperature': None,
      'unknown': None,
      'vascular_age': None,
      'visceral_fat': None,
      'vo2': None,
      'weight': None,
    }),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
# name: test_diagnostics_polling_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': False,
    'received_activity_data': False,
    'received_measurements': dict({
      'body_temperature': None,
      'bone_mass': None,
      'diastolic_blood_pressure': None,
      'electrodermal_activity_feet': None,
      'electrodermal_activity_left_foot': None,
      'electrodermal_activity_right_foot': None,
      'extracellular_water': None,
      'fat_free_mass': None,
      'fat_free_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
      ]),
      'fat_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
      ]),
      'fat_mass_weight': None,
      'fat_ratio': None,
      'heart_rate': None,
      'height': None,
      'hydration': None,
      'intracellular_water': None,
      'muscle_mass': None,
      'muscle_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
        'left_wrist',
      ]),
      'pulse_wave_velocity': None,
      'skin_temperature': None,
      'sp02': None,
      'systolic_blood_pressure': None,
      'temperature': None,
      'unknown': None,
      'vascular_age': None,
      'visceral_fat': None,
      'vo2': None,
      'weight': None,
    }),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': False,
  })
# ---
# name: test_diagnostics_webhook_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': dict({
      'body_temperature': None,
      'bone_mass': None,
      'diastolic_blood_pressure': None,
      'electrodermal_activity_feet': None,
      'electrodermal_activity_left_foot': None,
      'electrodermal_activity_right_foot': None,
      'extracellular_water': None,
      'fat_free_mass': None,
      'fat_free_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
      ]),
      'fat_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
      ]),
      'fat_mass_weight': None,
      'fat_ratio': None,
      'heart_rate': None,
      'height': None,
      'hydration': None,
      'intracellular_water': None,
      'muscle_mass': None,
      'muscle_mass_for_segments': list([
        'torso',
        'left_leg',
        'left_arm',
        'right_leg',
        'right_arm',
        'left_wrist',
      ]),
      'pulse_wave_velocity': None,
      'skin_temperature': None,
      'sp02': None,
      'systolic_blood_pressure': None,
      'temperature': None,
      'unknown': None,
      'vascular_age': None,
      'visceral_fat': None,
      'vo2': None,
      'weight': None,
    }),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
